Fix source viewer file tree width if collapsed

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -2259,6 +2259,19 @@ body.file-viewer {
   #validation-options {
     padding-left: 19em;
   }
+
+  .collapsed-files {
+    #files {
+      width: 5em;
+    }
+
+    #content-wrapper,
+    #messages,
+    #thinking,
+    #validation-options {
+      padding-left: 3em;
+    }
+  }
 }
 
 .collection-add-dropdown,
